<resources>
    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>
    <color name="green">#32733A</color>
    <color name="red">#733232</color>
    <color name="yellow">#F7D417</color>
    <string name="app_name">HOV Helper</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">register</string>
    <string name="title_activity_start">Start</string>
    <string name="title_activity_main_event">My Events</string>
    <string name="title_activity_create_event">Create Event</string>
    <string name="title_activity_read_event">Read Event</string>
    <string name="title_activity_delete_event">Delete Event</string>
    <string name="title_activity_event_type_selection">Create Event</string>
    <string name="title_activity_create_event_data">Create Event</string>
    <string name="subtitle_activity_create_event_data">Start Location</string>
    <string name="title_activity_create_event_data_end">Create Event</string>
    <string name="title_activity_event_details">Event Details</string>
    <string name="title_activity_temp_display">TempDisplayActivity</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="title_activity_reset_password">Reset Password</string>
    <string name="title_activity_resend_verification_code">Resend Verification Code</string>
    <string name="title_activity_verification_code">Verify Account</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="title_activity_profile_management">My Profile</string>
    <string name="title_activity_profile_update">Profile Update</string>
    <string name="title_activity_profile_view">My Profile</string>
    <string name="title_activity_profile_create">Create Profile</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="title_activity_test_address">TestAddressActivity</string>
    <string name="CurrentPassword">Current Password</string>
    <string name="NewPassword">New Password</string>
    <string name="Re_enterNewPassword">Re-enter New Password</string>
    <string name="ChangePassword">Change Password</string>
    <string name="NumberOfSeats">Number of Seats (Available or Required)</string>
    <string name="EventType">Event Type (Ride or Share)</string>
    <string name="title_activity_requested_events">Requested Rides</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_search_result">Search Results</string>
    <string name="title_activity_search_event">Search Events</string>
    <string name="Start_Search_Street_Address">Start Search Street Address</string>
    <string name="Start_Search_City_Box">Start Search City/Town</string>
    <string name="Start_Search_State_Box">Start Search State</string>
    <string name="Start_Search_ZipCode_Box">Start Search Zip Code</string>
    <string name="Start_Search_Date_Box">Click to Select Date</string>
    <string name="End_Search_Street_Address">End Search Street Address</string>
    <string name="End_Search_City_Box">End Search City/Town</string>
    <string name="End_Search_State_Box">End Search State</string>
    <string name="End_Search_ZipCode_Box">End Search Zip Code</string>
    <string name="End_Search_Date_Box">Click to Select Date</string>
    <string name="miles_from_end">miles from end</string>
    <string name="miles_from_start">miles from start</string>
    <string name="title_activity_request_details">RequestDetails</string>
    <string name="title_activity_view_user">User Profile</string>
</resources>
