<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:orientation="vertical"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:tools="http://schemas.android.com/tools"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context="sweng500team2summer15.hov_helper.event.management.SearchEventActivity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Start Location"
                android:layout_marginBottom="10dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Start_Search_Street_Box"
                android:inputType="textPostalAddress"
                android:hint="@string/Start_Search_Street_Address"
                android:gravity="center"
                android:textIsSelectable="true"
                android:textSize="15sp"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:text="181 Sweet Farm Road" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Start_Search_City_Box"
                android:inputType="textPostalAddress"

                android:gravity="center"
                android:hint="@string/Start_Search_City_Box"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:textSize="15sp"
                android:text="Portsmouth" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Start_Search_State_Box"
                android:inputType="textPostalAddress"
                android:gravity="center"
                android:hint="@string/Start_Search_State_Box"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:textSize="15sp"
                android:text="RI" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/Start_Search_ZipCode_Box"
                android:hint="@string/Start_Search_ZipCode_Box"
                android:gravity="center"
                android:textSize="15sp"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:text="02871" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/Start_Search_Date_Box"
                android:gravity="center"
                android:hint="@string/Start_Search_Date_Box"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:textSize="15sp"
                android:text="2015-08-07" />

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/StartSearchDistanceBar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Small Text"
                android:layout_gravity="center"
                android:id="@+id/textView25"
                android:layout_marginBottom="10dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/StartSearchDistance"
                android:gravity="center"
                android:hint="Start Search Distance"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:textSize="15sp"
                android:text="2000"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="End Location"
                android:layout_marginBottom="10dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/End_Search_Street_Box"
                android:inputType="textPostalAddress"
                android:hint="@string/End_Search_Street_Address"
                android:gravity="center"
                android:textIsSelectable="true"
                android:textSize="15sp"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:text="372 Mohegan Park Road" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/End_Search_City_Box"
                android:inputType="textPostalAddress"
                android:gravity="center"
                android:hint="@string/End_Search_City_Box"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:textSize="15sp"
                android:text="Norwich" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/End_Search_State_Box"
                android:inputType="textPostalAddress"
                android:gravity="center"
                android:hint="@string/End_Search_State_Box"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:textSize="15sp"
                android:text="CT" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/End_Search_ZipCode_Box"
                android:hint="@string/End_Search_ZipCode_Box"
                android:gravity="center"
                android:textSize="15sp"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:text="06360" />

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/EndSearchDistanceBar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_gravity="center"
                android:text="Small Text"
                android:id="@+id/textView26"
                android:layout_marginBottom="10dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/EndSearchDistance"
                android:gravity="center"
                android:hint="End Search Distance"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:textSize="15sp"
                android:text="2000"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Search For Drivers"
                android:id="@+id/textView23"
                android:layout_weight="1.42"
                android:gravity="center" />

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/Drive_Search_btn"
                android:src="@mipmap/ic_launcher"
                android:background="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Search for Riders"
                android:id="@+id/textView24"
                android:gravity="center" />

            <ImageButton
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:id="@+id/Ride_search_btn"
                android:src="@mipmap/ic_thumb"
                android:background="@color/white" />

        </LinearLayout>

</ScrollView>